初始化index.html文件” git commit -m 初始化index.html文件”

--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@
             </a>
         </div>
         <!-- 秒杀模块 -->
-        <!-- <div class="fioor">
-            <!-- <div class="fioor_hd">
+        <div class="fioor">
+            <div class="fioor_hd">
                 <div>京东秒杀</div>
                 <div>14</div>
                 <div>01</div>
                 <div>03</div>
                 <div>17</div>
                 <a href="#">爆款浏览</a>
-            </div> -->
-    </div> -->
+            </div>
+        </div>
     </div>
 </body>
 
